--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a Macalester College alumni and current bartender. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Winona, MN</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Tennis, camping, hiking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Something intellectually stimulating that makes me happy.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Northeast Minneapolis</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to explore a new field and expand my career options</p>
     </section>
 
     <footer id="footer">
